# mesh_stuff

./: CMakeLists.txt  README.md
cmake/: gtest.cmake  zstr.cmake
data/: hex20.vtu  hex20_bin.msh  hex20_bin.vtk  hex20_txt.msh  hex20_txt.vtk  hex27.vtu  hex27_bin.msh  hex27_bin.vtk  hex27_ref.vtu  hex27_txt.msh  hex27_txt.vtk  hex8.vtu  hex8_bin.vtk  hex8_ref.msh  hex8_txt.msh  hex8_txt.vtk  line2_bin.vtk  line2_txt.vtk  line3.vtu  line3_bin.msh  prism15.vtu  prism15_bin.msh  prism15_bin.vtk  prism15_txt.msh  prism15_txt.vtk  prism18.vtu  prism18_bin.msh  prism18_bin.vtk  prism18_txt.msh  prism18_txt.vtk  prism6.vtu  prism6_bin.msh  prism6_bin.vtk  prism6_txt.msh  prism6_txt.vtk  pyr13.vtu  pyr13_bin.msh  pyr13_bin.vtk  pyr13_txt.msh  pyr13_txt.vtk  (+42 more)
inc/mesh/: io.hpp
src/: base64.cpp  base64.hpp  gmsh.cpp  node_ordering.hpp  nodes_per_elem.cpp  stl.cpp  util.cpp  util.hpp  vtk.cpp  vtu.cpp
tests/: CMakeLists.txt  common.hpp  gmsh_io_tests.cpp  stl_export.cpp  stl_import_tests.cpp  vtk_export.cpp  vtu_export_tests.cpp  vtu_io_tests.cpp  zlib_test.cpp  zstr_test.cpp
